appId: dev.hozon.e2e
---
- launchApp:
    clearState: true
- tapOn:
    id: "write"
- extendedWaitUntil:
    visible:
      id: "done"
    timeout: 120000
- assertVisible: "Stores: OK.*"
- stopApp
- launchApp
- tapOn:
    id: "verify"
- extendedWaitUntil:
    visible:
      id: "done"
    timeout: 120000
- assertVisible: "Stores: OK.*"
